added fetch for current day and displayed it to html, added map to produce icons, linked searchbar and search button

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <h1 id="current-city-name" class="title is-2 has-text-white has-text-centered">CITY NAME</h1>
         <article class="title is-4 m-6 py-4">
         <p id="current-temp" class="has-text-white">Temp:</p>
+        <p id="current-desc" class="has-text-white"></p>
+        <icon id="current-icon" class="icon"></icon>
         <p id="current-wind" class="has-text-white">Wind:</p>
         <p id="current-humidity" class="has-text-white">Humidity:</p>
         </article>
